UI alignment fixes and error messages

--- a/skietbaan_fe/src/components/RegisterStyles.css
+++ b/skietbaan_fe/src/components/RegisterStyles.css
@@ -321,7 +321,7 @@
   text-align: center;
 }
 
-.error-message{
+.error-message-login{
   color: #EA241A;
   font-size: 12px;
   padding-top: 3px;
